// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`boxed bigint > crossSerialize > scoped > supports boxed bigint 1`] = `"($R=>$R[0]=Object(9007199254740991n))($R["example"])"`;

exports[`boxed bigint > crossSerialize > supports boxed bigint 1`] = `"$R[0]=Object(9007199254740991n)"`;

exports[`boxed bigint > crossSerializeAsync > scoped > supports boxed bigint 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=Object(9007199254740991n)))($R["example"])"`;

exports[`boxed bigint > crossSerializeAsync > supports boxed bigint 1`] = `"$R[0]=Promise.resolve($R[1]=Object(9007199254740991n))"`;

exports[`boxed bigint > crossSerializeStream > scoped > supports boxed bigint 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = { p: 0, s: 0, f: 0 };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`boxed bigint > crossSerializeStream > scoped > supports boxed bigint 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Object(9007199254740991n)))($R["example"])"
`;

exports[`boxed bigint > crossSerializeStream > supports boxed bigint 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = { p: 0, s: 0, f: 0 };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`boxed bigint > crossSerializeStream > supports boxed bigint 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Object(9007199254740991n))"
`;

exports[`boxed bigint > serialize > supports boxed bigint 1`] = `"Object(9007199254740991n)"`;

exports[`boxed bigint > serializeAsync > supports boxed bigint 1`] = `"Promise.resolve(Object(9007199254740991n))"`;

exports[`boxed bigint > toCrossJSON > supports boxed bigint 1`] = `"{"t":21,"i":0,"f":{"t":3,"s":"9007199254740991"}}"`;

exports[`boxed bigint > toCrossJSONAsync > supports boxed bigint 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":21,"i":1,"f":{"t":3,"s":"9007199254740991"}}}"`;

exports[`boxed bigint > toCrossJSONStream > supports boxed bigint 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`boxed bigint > toCrossJSONStream > supports boxed bigint 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":21,"i":3,"f":{"t":3,"s":"9007199254740991"}}]}"`;

exports[`boxed bigint > toJSON > supports boxed bigint 1`] = `"{"t":{"t":21,"i":0,"f":{"t":3,"s":"9007199254740991"}},"f":31,"m":[]}"`;

exports[`boxed bigint > toJSONAsync > supports boxed bigint 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":21,"i":1,"f":{"t":3,"s":"9007199254740991"}}},"f":31,"m":[]}"`;
